# libwacom

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  COPYING  Makefile.am  NEWS  README  README.md  autogen.sh  bug.html  configure.ac  deprecated.html  dir_2bc10c097a08e7c15dc75588169cd55b.html  dir_2bc10c097a08e7c15dc75588169cd55b.js  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__context.html  group__context.js  group__devices.html  group__devices.js  group__styli.html  group__styli.js  index.html  libwacom.pc.in  libwacom_8h.html  libwacom_8h.js  libwacom_8h__incl.dot  libwacom_8h_source.html  (+12 more)
.github/: label-commenter-config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  New_device_support.md
.github/actions/meson/: action.yml
.github/actions/pkginstall/: install-apt.sh  install-pip.sh
.github/workflows/: check-for-sysinfo.yml  freebsd.yml  label-commenter.yml  main.yml  pages.yml  style.yml
data/: Makefile.am  bamboo-0fg-m-p-alt.tablet  bamboo-0fg-s-p-alt.tablet  bamboo-0fg-s-p.tablet  bamboo-16fg-4x5.tablet  bamboo-16fg-m-pt.tablet  bamboo-16fg-s-p.tablet  bamboo-16fg-s-pt.tablet  bamboo-16fg-s-t.tablet  bamboo-2fg-4x5.tablet  bamboo-2fg-6x8.tablet  bamboo-2fg-fun-m-pt.tablet  bamboo-2fg-fun-s-pt.tablet  bamboo-2fg-m-p.tablet  bamboo-2fg-s-p.tablet  bamboo-2fg-s-pt.tablet  bamboo-2fg-s-t.tablet  bamboo-2fg.tablet  bamboo-4fg-fun-m.tablet  bamboo-4fg-fun-s.tablet  bamboo-4fg-s-pt.tablet  bamboo-4fg-s-t.tablet  bamboo-4fg-se-m-pt.tablet  bamboo-4fg-se-s-pt.tablet  bamboo-craft.tablet  bamboo-one-m-p.tablet  bamboo-one.tablet  bamboo-pad-wireless.tablet  bamboo-pad.tablet  bamboo-pen-and-touch.tablet  bamboo-pen.tablet  check-data-in-meson.build.sh  check-files-in-git.sh  check-svg-exists.sh  chuwi-minibookx.tablet  cintiq-12wx.tablet  cintiq-13hd.tablet  cintiq-13hdt.tablet  cintiq-16-2.tablet  cintiq-16.tablet  (+978 more)
data/layouts/: Makefile.am  README  README.md  xp-pen-deco-mw.tablet
doc/: Makefile.am  doxygen.conf  doxygen.conf.in
libwacom/: Makefile.am  libwacom-database.c  libwacom-deprecated.c  libwacom-error.c  libwacom.c  libwacom.h  libwacom.sym  libwacomint.h  util-strings.h
search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js
test/: Makefile.am  __init__.py  check-files-in-git.sh  conftest.py  dbverify.c  load.c  tablet-svg-validity.c  tablet-validity.c  test-dbverify.c  test-deprecated.c  test-load.c  test-ltversion.c  test-stylus-validity.c  test-tablet-svg-validity.c  test-tablet-validity.c  test_data_files.py  test_libwacom.py  test_svg.py  test_udev_rules.py  valgrind.suppressions
tools/: 65-libwacom.rules.in  Makefile.am  clean_svg.py  debug-device.c  generate-hwdb.c  generate-hwdb.py  generate-udev-rules.c  libwacom-list-devices.man  libwacom-list-local-devices.man  libwacom-show-stylus.man  libwacom-update-db.py  list-compatible-styli.c  list-devices.c  list-local-devices.c  show-stylus.py  show-svg-image.c
