option('documentation',
       type: 'feature',
       value: 'disabled',
       description: 'Build doxygen documentation [default=auto]')
option('udev-dir',
       type: 'string',
       value: '',
       description: 'udev base directory [default=$prefix/lib/udev]')
option('tests',
       type: 'feature',
       value: 'enabled',
       description: 'Build the tests [default=enabled]')

